# pyscraper

./: .gitignore  GEMINI.md  LOG.md  README.md  main.py  pyproject.toml
.run/: Celery beat.run.xml  Celery.run.xml
app/: scraper.py
app/config/: celery.py  database.py  log.py
app/entity/: __init__.py  keyword.py  product.py  product_price.py
app/enums/: channel.py  channel_enum.py  product_platform.py
app/model/: product.py  scrape_result.py  scraped_product.py
app/repository/: base_repository.py  keyword_repository.py  product_history_repository.py  product_repository.py
app/scrape/: aboutpet_scraper.py
app/scraper/bots/: coupang_scrpae_bot.py  fitpet_bot.py  fitpet_scrape_bot.py
app/scraper/driver/: README.md
app/scraper/driver/addons/: vpn_master-0.1.4-an+fx.xpi
app/scraper/engine/: bot.py  bot_action_strategy.py  bot_behavior.py  chrome_bot.py  scraper.py
app/scraper/model/: scrape_result.py  scraped_product.py  scraper_models.py
app/scraper/sites/: aboutpet_scraper.py  fitpet_scraper.py  petfriends_scraper.py
app/service/: base_repository.py  keyword_service.py  product_service.py
app/service/model/: service_models.py
app/task/: tasks.py
app/util/: util_header.py  util_proxy.py  util_scrape.py  util_user_agent.py
