[tool.poetry]
name = "pyscraper"
version = "0.1.0"
description = ""
authors = ["Raynor <jonggu.woo@fitpet.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"
httpx = "^0.28.1"
fake-useragent = "^2.2.0"
argparse = "^1.4.0"
black = "^25.1.0"
pandas-stubs = "^2.3.0.250703"
pydantic = "^2.11.7"
celery = {extras = ["redis"], version = "^5.5.3"}
celery-types = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
